fixed jump when moving from splash to app

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -17,7 +17,7 @@ div.full-height {
 }
 
 div.background {
-    background-size: cover;
+    background-size: 100% 100%;
     padding: 22px;
     padding-top: 44px;
 
